# Project_Search_Engine

./: .gitignore  CMakeLists.txt  README.md
include/: converter.h  inverted_index.h  server.h
resources/: file001.txt
src/: CMakeLists.txt  converter.cpp  inverted_index.cpp  main.cpp  server.cpp
tests/: CMakeLists.txt
